--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,18 @@
 django
 python-decouple
+sentence_transformers
+weaviate
+gunicorn
 requests
 Celery
 Redis
 python-dotenv
 django-celery-beat
 django-celery-results
-ollama
 llama-index
 llama-parse
 langchain-ollama
 jupyter
+transformers 
+torch
+
