--- a/src/Dockerfile.backend
+++ b/src/Dockerfile.backend
@@ -6,12 +6,14 @@ WORKDIR /slackbot
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN pip show gunicorn
+
 # copy the app code
 COPY . /slackbot/
 
 
 EXPOSE 8080
 
-CMD ["gunicorn ", "slackbot.wsgi:application""--bind", "0.0.0.0:8000", ]
+CMD ["gunicorn", "slackbot.wsgi:application","--bind", "0.0.0.0:8000", ]
 
 
