--- a/src/Dockerfile.ollama
+++ b/src/Dockerfile.ollama
@@ -18,4 +18,4 @@ RUN curl -fsSL https://ollama.com/install.sh | sh
 EXPOSE 11434
 
 # Set the command to run Ollama, assuming it runs on 11434 by default
-CMD ["ollama", ]
+CMD ["ollama", "serve"]
