--- a/src/Dockerfile.backend
+++ b/src/Dockerfile.backend
@@ -1,6 +1,6 @@
 FROM  python:3.10-slim
 
-WORKDIR /slackbot
+WORKDIR /app
 
 #Install dependencies 
 COPY requirements.txt .
@@ -9,11 +9,14 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN pip show gunicorn
 
 # copy the app code
-COPY . /slackbot/
+COPY . /app/
+
+WORKDIR /app/src/slackbot
 
 
 EXPOSE 8080
 
 CMD ["gunicorn", "slackbot.wsgi:application","--bind", "0.0.0.0:8000", ]
+# CMD ["python", "manage.py","runserver","--bind", "8081"]
 
 
