--- a/src/Dockerfile.celery
+++ b/src/Dockerfile.celery
@@ -1,12 +1,13 @@
 FROM python:3.10-slim
 
-WORKDIR /slackbot
+WORKDIR /app
 
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 
-COPY . /slackbot/
+COPY . /app/
+WORKDIR /app/src/slackbot
 
 CMD [ "celery","-A","slackbot","worker","--loglevel=info" ]
