--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     depends_on:
       - redis
     environment:
-      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_BROKER_URL=${CELERY_BROKER_URL}
     volumes:
       - .:/slackbot  # Optional: mounts project directory for development
     networks:
